--- a/prepros.config
+++ b/prepros.config
@@ -917,6 +917,16 @@
         "config": {
           "autoCompile": true
         }
+      },
+      {
+        "file": "#source/scss/style.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          }
+        }
       }
     ]
   }
