--- a/prepros.config
+++ b/prepros.config
@@ -915,7 +915,12 @@
       {
         "file": "#source/js/main.js",
         "config": {
-          "autoCompile": true
+          "autoCompile": true,
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
         }
       },
       {
